--- a/Casos_Uso/CU21.html
+++ b/Casos_Uso/CU21.html
@@ -14,7 +14,7 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU13</td>
+    <td>CU21</td>
   </tr>
   <tr>
     <th>Nombre</th>
@@ -33,6 +33,7 @@
     <td>
       <ul>
         <li>Que el usuario que se quiera modificar no sea administrador, porque no nos dejará</li>
+        <li>Una vez convertido, no podemos volver a convertirle a usuario normal, es una acción irreversible</li>
       </ul>
     </td>
   </tr>
