--- a/Casos_Uso/CU20.html
+++ b/Casos_Uso/CU20.html
@@ -14,25 +14,26 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU16</td>
+    <td>CU20</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td>Borrar productos</td>
+    <td>Eliminar una reserva</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td>Administradores</td>
+    <td>Usuario</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td>Los administradores pueden borrar los productos de la aplicación si les parece que no son adecuados.</td>
+    <td>El usuario podrá eliminar las reservas de sus productos.</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li>Tengamos el rol de administrador para realizar esta acción.</li>
+        <li>Que tenga un usuario reservado para ese producto</li>
+        <li>Que ese producto sea suyo</li>
       </ul>
     </td>
   </tr>
@@ -40,9 +41,9 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li>Buscamos los productos que queramos eliminar</li>
-        <li>Le seleccionamos y le damos al botón de "Eliminar"</li>
-        <li>Confirmamos la acción, ya que es irreversible</li>
+        <li>El usuario accede al panel de reservas de su perfil</li>
+        <li>Se dirige a mis productos reservados y selecciona el que quiere eliminar esa reserva</li>
+        <li>Aparecerá un botón de eliminar reserva</li>
       </ol>
     </td>
   </tr>
@@ -50,7 +51,8 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li>El producto ha sido eliminado correctamente de la aplicación</li>
+        <li>La reserva se eliminará para se producto</li>
+        <li>Los usuarios podrán solicitar reservar ese producto</li>
       </ul>
     </td>
   </tr>
@@ -58,7 +60,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li>No se ha borrado el producto porque no se ha confirmado después o porque no tiene el usuario permisos suficientes.</li>
+        <li>No se ha podido eliminar la reserva porque no era nuestra</li>
       </ul>
     </td>
   </tr>
