Mailto y añadir algo de info y correo

--- a/WebMart/información.html
+++ b/WebMart/información.html
@@ -8,6 +8,11 @@
     <title>WebMart</title>
     <link rel="stylesheet" href="CSS/index.css">
 </head>
+<style>
+    header{
+        border-bottom: 1px solid lightgray;
+    }
+</style>
 <body>
 <header>
 
@@ -26,7 +31,23 @@
 
 </header>
 
-<main>
+<main id="info">
+
+    <section class="sInfo1">
+        <p>Información acerca de WebMart</p>
+    </section>
+
+    <section class="sInfo2 box">
+        <p>¿Quien soy?</p>
+        <p>
+            Soy Javier Calvo, un estudiante del Grado Superior de ASIR en Palencia que ha presentado este proyecto como trabajo de fin de grado en el cual ha estado trabajando
+            más de 3 meses. Soy un desarrollador web al que le lleva gustando la informatica desde pequeño. Esta aplicación ha sido diseñada con HTML, CSS y JS, además de PHP y MYSQL.
+        </p>
+    </section>
+
+    <section class="sInfo3 box">
+        <img src="IMG/LOGOS_ERRORES/logoEntero.png" alt="Logo">
+    </section>
 </main>
 
 <footer>
